test/tests/compiler/1_int_constants/valid/multi_digit.plx
pub fn main(none) i32 {
    #  test case w/ multi-digit constant
    return 100
}
